fix paths